Fix rating alignment in portrait view.

--- a/MaterialSkin/HTML/material/html/css/style.css
+++ b/MaterialSkin/HTML/material/html/css/style.css
@@ -990,6 +990,7 @@ div.v-subheader {
  left:0px;
  top:var(--np-portrait-image-size);
  text-shadow: 2px 2px 5px var(--text-shadow-color);
+ margin:0px!important
 }
 
 .np-portrait-rating .v-rating {
